name:                  burner
version:               0.0.0
build-type:            Simple
cabal-version:         >= 1.22

library
  default-language:    Haskell2010
  exposed-modules:     Burner
  ghc-options:         -Wall
  build-depends:       base == 4.8.*
                     , basic-prelude
                     , turtle

executable burner-create
  default-language:    Haskell2010
  main-is:             burner-create.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , burner
                     , turtle

executable burner-state
  default-language:    Haskell2010
  main-is:             burner-state.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , burner
                     , turtle

executable burner-address
  default-language:    Haskell2010
  main-is:             burner-address.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , burner
                     , turtle

executable burner-status
  default-language:    Haskell2010
  main-is:             burner-status.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , basic-prelude
                     , burner
                     , turtle
